Firefox Bottom Padding Fix
Firefox doesn't support bottom padding within overflowing containers, so this update addresses this issue by using pseudo element trickery to add the missing padding.

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ span[data-numbered-container] {
   counter-reset: item;
   margin: 0;
   padding: 0.5ch;
+  padding-bottom: 0;
   flex-shrink: 0;
   color: #ffffff;
   text-align: right;
@@ -40,6 +41,12 @@ span[data-numbered-container] {
   cursor: text;
   list-style: inside none;
   overflow: hidden;
+}
+[data-numbered-container] ol::after {
+  content: "";
+  width: 100%;
+  height: var(--overflow-offset);
+  display: inline-block;
 }
 [data-numbered-container][data-numbered-hidden] ol {
   display: none;
